# Examples

./: 串口接受四位数据并画图.py  单片机连接电脑串口切歌.py  远程切歌.py  连接MQTT并显示图，关闭的时候会有bug.py
0.96Oled投屏/: udp_serve.py
0.96Oled投屏/udp_client/: sdkconfig  sdkconfig.old
TFT_LCD投屏/: aa.py  d.py  udp_serve_lcd.py
TFT_LCD投屏/Arduino程序/: TFT_flash_jpg.ino  jpeg1.h
aiden-car/esp_timer/: sdkconfig  sdkconfig.old
arduinoOLED/: arduinoOLED.ino
arduino_步进电机/: arduino____.ino
c8_hongwai/: .mxproject  c8_hongwai.ioc  flash.h  mx.scratch
c8_hongwai/MDK-ARM/: c8_hongwai.uvguix.34010  c8_hongwai.uvoptx  c8_hongwai.uvprojx  startup_stm32f103xb.lst  stmflash.c  stmflash.h
c8t6-oled-spi/OLED_hal/: oled.c  oled.h  readme.txt
c8t6-oled-spi/OLED_标准库/: oled.c  oled.h
esp32-s3-sr/: sdkconfig  sdkconfig.old
esp32-s3-sr/main/: app_main.cpp
esp32OLEdarduino/: esp32OLEdarduino.ino
esp32aliyunMQTT/: esp32aliyunMQTT.ino
esp8266ALIYUN/: esp8266ALIYUN.ino
esp8266Mqtt/: esp8266Mqtt.ino
hongwaiforliling/: .mxproject  hongwaiforliling.ioc
hongwaiforliling/MDK-ARM/: hongwaiforliling.uvguix.34010  hongwaiforliling.uvoptx  hongwaiforliling.uvprojx  startup_stm32f103xb.lst
i2s/: WAV_C.h
i2s/I2S采集麦克风数据并通过OLED显示出频谱图/: esp32OLEdarduino.ino
i2s/l录音机/: 录音机.ino
i2s/最基础的I2S采集麦克风数据/: i2s.ino
stm32flash掉电存储/: 使用说明.md
stm32oled_iic/stm32oled的库/: ascii.h  (+3 more)
w5500+433/: w5500.ino
手写spi-st7789以及st7735/: spi_master_example_main.c
接的单/bsa8112触摸芯片门锁/main/: CMakeLists.txt  WAV_C.h  blufi_example_main.c  kvdb_basic_sample.c  kvdb_type_string_sample.c  open8.h
百度讯飞语音/: sdkconfig  sdkconfig.old
(+79 files in other folders)
